# golem-terminal

./: .gitignore  CLAUDE.md  Cargo.toml  debug.sh  install.sh  launch.sh  orchestrate.py
assets/: icon.icns
src/: agent_state.rs  config.rs  main.rs  pty.rs  session.rs  test_harness.rs  ui.rs
tests/: e2e_gui.rs  real_claude.sh
