[package]
name = "golem-terminal"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "golem-terminal"
path = "src/main.rs"

[features]
default = []
gui = ["dep:iced", "dep:iced_term", "dep:futures", "dep:serde", "dep:serde_json", "dep:image", "dep:tokio"]

[dependencies]
clap         = { version = "4", features = ["derive"] }
portable-pty = "0.9"
libc         = "0.2"
anyhow       = "1"
iced         = { version = "0.14", optional = true, features = ["canvas", "lazy", "advanced", "image", "tokio"] }
iced_term    = { version = "0.7", optional = true }
futures      = { version = "0.3",  optional = true }
serde        = { version = "1", features = ["derive"], optional = true }
serde_json   = { version = "1", optional = true }
image        = { version = "0.25", optional = true, default-features = false, features = ["png"] }
tokio        = { version = "1", features = ["rt-multi-thread"], optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1
